@@ -108,4 +108,15 @@
         max-width: 100%;
         margin-bottom: -2px;
     }
+
+    /* PM Quick Reply */
+    #gamefox-pm-quick-reply p
+    {
+        margin: 5px 0 0 0 !important;
+    }
+    #gamefox-pm-quick-reply label span
+    {
+        width: 50px;
+        display: inline-block;
+    }
 }
