@@ -25,7 +25,12 @@
 <overlay id="gamefox-overlay" xmlns="http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul">
   <script type="application/x-javascript" src="chrome://gamefox/content/defs.js"/>
   <script type="application/x-javascript" src="chrome://gamefox/content/lib.js"/>
-  <script type="application/x-javascript" src="chrome://gamefox/content/page.js"/>
+
+  <script type="application/x-javascript"
+    src="chrome://gamefox/content/page.js"/>
+  <script type="application/x-javascript"
+    src="chrome://gamefox/content/page_scripts/pm.js"/>
+
   <script type="application/x-javascript" src="chrome://gamefox/content/overlay.js"/>
   <script type="application/x-javascript" src="chrome://gamefox/content/tags.js"/>
   <script type="application/x-javascript" src="chrome://gamefox/content/css.js"/>
@@ -42,6 +47,8 @@
   <script type="application/x-javascript" src="chrome://gamefox/content/tracked.js"/>
   <script type="application/x-javascript" src="chrome://gamefox/content/date.js"/>
   <script type="application/x-javascript" src="chrome://gamefox/content/observers.js"/>
+  <script type="application/x-javascript"
+    src="chrome://gamefox/content/pm.js"/>
 
   <!-- common context menu -->
   <popup id="contentAreaContextMenu">
