@@ -12,6 +12,8 @@
       only on GameFAQs by default, but no features were removed
     * Basic (incomplete) support for reverse ("newest first") message ordering
     * Highlight the "New Messages" link when you have new PMs
+    * Add a quick reply for PMs: write a reply while having the original message
+      on the same page
     * Other minor bug fixes and enhancements
 
 2011-11-25:
